# SmartSearch-LLM-Based-Semantic-Search-Engine

./: .env.example  Dockerfile  Docunentation.md  README.md  ROADMAP.md  app.py  home.py  main.py  pyproject.toml  requirements.txt  structure.graphql
app/: home.py  search_engine.py
app_pages/: README.md  custom_urls.py  doc_chat.py  home.py  instruction.py  search_engine.py
assets/: snippet.txt
config/: README.md  config.py
ipynb/: AI_Powered_Search_Engine.ipynb
llm/: llm_handler.py
notebook/: AI_Powered_Search_Engine.ipynb  README.md
pages/: custom_urls.py  home.py  instruct.py
scripts/: README.md  config.py  google_search.py  scraper.py  utils.py  vector_store.py
search/: README.md  google_search.py  scraper.py
static/: styles.css
utils/: README.md  utils.py
vector_db/: README.md  vector_store.py
